[project]
name = "method"
version = "0.1.0"
description = ""
authors = [
    {name = "Имя Фамилия",email = "ehsonboboev7@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy (>=2.0.36,<3.0.0)",
    "uvicorn (>=0.32.1,<0.33.0)",
    "alembic (>=1.14.0,<2.0.0)",
    "pydantic-settings (>=2.6.1,<3.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
